@@ -31,6 +31,13 @@
             <version>1.3-groovy-2.5</version>
             <scope>test</scope>
         </dependency>
+        <!-- more dependencies -->
+        <dependency>  <!--Only necessary for surefire to run spock tests during the maven build -->
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.6.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!--    <dependencyManagement>-->
@@ -74,6 +81,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
